Rebrand to SWGear + GitHub Actions deploy

--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>SEA Builder | Star Wars Galaxies Restoration</title>
-  <meta name="description" content="Plan your Skill Enhancing Attachment (SEA) builds for armor and weapons in Star Wars Galaxies Restoration.">
+  <title>SWGear | SWG Restoration Build Planner</title>
+  <meta name="description" content="SWGear - Plan your armor, SEAs, buffs, and stats for Star Wars Galaxies Restoration.">
   <link rel="icon" type="image/webp" href="/swgr-logo.webp">
   <link rel="stylesheet" href="/src/styles/index.css">
 </head>
@@ -15,8 +15,8 @@
       <div class="header-brand">
         <img src="/swgr-logo.webp" alt="SWG Restoration" class="header-logo">
         <div class="header-title-group">
-          <h1 class="header-title">SEA Builder</h1>
-          <p class="header-subtitle">Skill Enhancing Attachment Planner</p>
+          <h1 class="header-title">SWGear</h1>
+          <p class="header-subtitle">SWG Restoration Build Planner</p>
         </div>
       </div>
       
