Add Jewelry tab with 5 slots (Necklace, Rings, Bracelets) - stats integrate into totals

--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
       <!-- Tab Navigation -->
       <nav class="tab-nav">
         <button class="tab-btn active" data-tab="builder">Build</button>
+        <button class="tab-btn" data-tab="jewelry">Jewelry</button>
         <button class="tab-btn" data-tab="crafter">Crafter</button>
       </nav>
       
@@ -105,6 +106,20 @@
           </div>
         </section>
       </main>
+    </div>
+
+    <!-- Jewelry View -->
+    <div id="jewelry-view" class="view-container">
+      <section class="jewelry-tab-content">
+        <div class="jewelry-header">
+          <h2>Jewelry & Gear Stats</h2>
+          <p class="jewelry-description">Track your jewelry stats (Necklace, Rings, Bracelets). These are loot-based items with fixed stats that add to your build totals.</p>
+        </div>
+        
+        <div id="jewelry-content" class="jewelry-content">
+          <!-- Jewelry editor rendered here -->
+        </div>
+      </section>
     </div>
 
     <!-- Crafter View -->
