Add Ace Pack/Tusken King backpacks, heroic jewelry presets (35 sets), and JewelrySection component

--- a/index.html
+++ b/index.html
@@ -156,6 +156,11 @@
             <!-- Backpack section rendered here -->
           </div>
           
+          <!-- Heroic Jewelry Section -->
+          <div id="jewelry-container" class="jewelry-container">
+            <!-- Jewelry section rendered here -->
+          </div>
+          
           <div id="external-buffs-container" class="external-buffs-container">
             <!-- External buffs rendered here -->
           </div>
